# charm

./: .gitignore  .readthedocs.yaml  Cargo.toml  README.md  RUST_FOR_CPP_IDIOTS_LIKE_ME.md  cache_backup.rs  cambalache.sh  listing_engine.md
.github/workflows/: rust.yml
doc/: stream.graphml  tokenizer.graphml
doc/screenshotter/: Cargo.toml
doc/screenshotter/projects/: demo.charm
doc/screenshotter/src/: main.rs  prelude.rs  screenshots.rs
doc/screenshotter/src/screenshots/: demo.rs  structure.rs
doc/source/: build.rst  conf.py  index.rst  structure.rst
docker/release/: Dockerfile  build_and_run.sh
gir/: Charm-0.1.gir  charm-cambalache-catalog.xml
src/: addr.rs  config.rs  datapath.rs  ext.rs  lib.rs  listing.rs  main.rs  serialization.rs  space.rs  util.rs
src/datapath/: cache.rs  space.rs
src/datapath/filter/: insert.rs  load_space.rs  mod.rs  overwrite.rs  shift.rs
src/datapath/space/: file.rs
src/gui/: helpers.rs  mod.rs  window.rs
src/listing/: break_line.rs  brk.rs  cursor.rs  hex_line.rs  line_group.rs  view.rs  window.rs
src/listing/brk/: hex.rs
src/listing/cursor/: break_header.rs  hex.rs
src/logic/: tokenizer.rs
src/logic/tokenizer/: normal.rs  port.rs  summary.rs
src/logic/tokenizer_tests/: content_display.xml  formatting.xml  nesting.xml  simple.xml  summary.xml
src/model/: addr.rs  datapath.rs  document.rs  mod.rs  selection.rs  space.rs  versioned.rs
src/model/datapath/: fetcher.rs
src/model/document/: brk.rs  change.rs  rebuild.rs  search.rs  structure.rs
src/model/document/brk/: hex.rs
src/model/listing/: cursor.rs  layout.rs  line.rs  line_group.rs  mod.rs  stream.rs  token.rs  tokenizer.rs  window.rs
src/model/listing/cursor/: bindump.rs  break_header.rs  ellipsis.rs  hex.rs  hexdump.rs  hexstring.rs  key.rs  punctuation.rs  summary_label.rs  title.rs
src/model/listing/stream_tests/: content_display.xml  formatting.xml  nesting.xml  simple.xml  summary.xml
src/model/selection/: hierarchy.rs  listing.rs  tree.rs
src/model/space/: cache.rs  file.rs
src/serialization/: v1.rs
src/space/: edit.rs  file.rs
src/view/: action.rs  addr_entry.rs  breadcrumb.ui  breadcrumbs.css  breadcrumbs.rs  charm.cmb  charm.css  charm.ui  column_addr.ui  column_name.ui  column_size.ui  config.rs  config_editor.rs  crash-dialog.ui  crash-document-recovery.ui  crashreport.css  crashreport.rs  datapath.rs  display-editor.ui  error-dialog.ui  error.rs  export-dialog.ui  export.rs  ext.rs  gsc.rs  helpers.rs  hierarchy.rs  insert-node.ui  listing.rs  main.ui  mod.rs  navigate-item.ui  navigate.ui  patches.rs  project.rs  props-editor.ui  props_editor.rs  selection.rs  settings.ui  unsaved-dialog.ui  (+1 more)
src/view/action/: debug.rs  delete_node.rs  destructure.rs  edit_props.rs  insert_node.rs  listing.rs  navigate.rs  nest.rs  new_project.rs  open_file.rs  open_project.rs  save_project.rs  settings.rs  tree.rs
src/view/action/debug/: reopen_current_document.rs  reopen_current_project.rs  revert_document.rs
src/view/action/listing/: array.ui  clipboard.rs  create_array.rs  data.rs  delete_selected_nodes.rs  goto.rs  goto.ui  import_file.rs  insert-node.ui  insert_node.rs  mode.rs  navigate.rs  navigate.ui  nest-nodes.ui  resize_node.rs  selection.rs
src/view/action/tree/: delete_node.rs  destructure.rs  export_binary_node.rs  nest.rs  select.rs
src/view/hierarchy/: gtkmodel.rs
src/view/hierarchy/gtkmodel/: node_item.rs  root_list_model.rs  structure_list_model.rs
src/view/listing/: bucket.rs  layout.rs  line.rs  mode.rs  pick.rs  selection_mode.rs  token_view.rs
src/view/listing/action/: export_ips.rs  goto.rs  insert_break.rs  mod.rs  mode.rs  movement.rs
src/view/listing/bucket/: bindump.rs  hexdump.rs
src/view/listing/component/: cursor.rs  scroll.rs
src/view/selection/: hierarchy.rs  tree.rs
src/widget/: config_editor.rs  listing.rs  mod.rs  patches.rs
(+17 files in other folders)
