[package]
name = "charm"
version = "0.1.0"
authors = ["misson20000 <xenotoad@xenotoad.net>"]
edition = "2021"
default-run = "charm"

[features]
default = ["gtk4_8"]
gtk4_8 = ["gtk/v4_8", "gtk"]
gtk = ["dep:gtk"]

[dependencies]
gtk = { version = "0.9.2", optional = true, package = "gtk4" }
glib = "0.20.4"
futures = "0.3.31"
lazy_static = "1.5.0"
tokio = { version = "1.41.0", features = ["full"] }
hex-literal = "0.4.1"
send_wrapper = "0.6.0"
conv = "0.3.3"
parking_lot = { version = "0.12.3", features = ["send_guard"] }
imbl = "3.0.0"
enum_dispatch = "0.3.13"
byteorder = "1.5.0"
lru = "0.12.5"
take_mut = "0.2.2"
itertools = "0.13.0"
roxmltree = "0.20.0"
once_cell = "1.20.2"
arc-swap = "1.7.1"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
seq-macro = "0.3.5"
serde = "1.0.213"
serde_derive = "1.0.213"
bincode = "1.3.3"
adw = { version = "0.7.0", package = "libadwaita" }
toml = "0.8.19"
xdg = "2.5.2"
bitflags = "2.6.0"
atomig = { version = "0.4.2", features = ["derive"] }
ouroboros = "0.18.4"

[dev-dependencies]
pretty_assertions = "1.4.1"
assert_matches = "1.5"
rusty-fork = "0.3.0"

[lib]
name = "charm"
crate-type   = ["rlib", "cdylib"]

[[bin]]
name = "charm"
required-features = ["gtk"]

[[bin]]
name = "layoutplayground"
