[package]
name = "charm"
version = "0.1.0"
authors = ["misson20000 <xenotoad@xenotoad.net>"]
edition = "2021"
default-run = "charm"
rust-version = "1.82"

[features]
default = ["gtk4_8"]
gtk4_8 = ["gtk/v4_8", "gtk"]
gtk = ["dep:gtk"]

[dependencies]
gtk = { version = "0.10.2", optional = true, package = "gtk4" }
glib = "0.21.4"
futures = "0.3.31"
lazy_static = "1.5.0"
tokio = { version = "1.48.0", features = ["full"] }
hex-literal = "1.1.0"
send_wrapper = "0.6.0"
conv = "0.3.3"
parking_lot = { version = "0.12.5", features = ["send_guard"] }
imbl = "6.1.0"
enum_dispatch = "0.3.13"
byteorder = "1.5.0"
lru = "0.16.2"
take_mut = "0.2.2"
itertools = "0.14.0"
roxmltree = "0.21.1"
once_cell = "1.21.3"
arc-swap = "1.7.1"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
seq-macro = "0.3.6"
serde = "1.0.228"
serde_derive = "1.0.228"
bincode = "1.3.3"
adw = { version = "0.8.0", package = "libadwaita" }
toml = "0.9.8"
xdg = "3.0.0"
bitflags = "2.10.0"
atomig = { version = "0.4.3", features = ["derive"] }
ouroboros = "0.18.5"

[dev-dependencies]
pretty_assertions = "1.4.1"
assert_matches = "1.5"
rusty-fork = "0.3.1"

[lib]
name = "charm"
crate-type   = ["rlib", "cdylib"]

[[bin]]
name = "charm"
required-features = ["gtk"]

[[bin]]
name = "layoutplayground"
